<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spicyfy</string>

    <string name="nav_home">Início</string>
    <string name="nav_search">Buscar</string>
    <string name="nav_now_playing">Tocando</string>
    <string name="nav_library">Biblioteca</string>

    <string name="home_greeting">Boa noite</string>
    <string name="home_section_recommended">Recomendado pra você</string>
    <string name="home_based_on">Baseado em %1$s</string>
    <string name="home_section_continue_listening">Continue ouvindo</string>
    <string name="home_recent_empty">Toque em alguma música pra ela aparecer aqui.</string>
    <string name="home_playlists_empty">Você ainda não tem playlists. Cria uma na Biblioteca!</string>

    <string name="search_hint">Músicas, artistas ou playlists</string>
    <string name="search_moods_title">Navegue por clima</string>

    <string name="lyrics_show">MOSTRAR LETRA</string>
    <string name="lyrics_hide">OCULTAR LETRA</string>

    <string name="library_empty_placeholder">Suas playlists e artistas favoritados vão aparecer aqui.</string>
    <string name="playlist_track_count">%1$d músicas</string>
    <string name="new_playlist">Nova playlist</string>
    <string name="playlist_name_hint">Nome da playlist</string>
    <string name="add_to_playlist">Adicionar à playlist</string>
    <string name="create">Criar</string>
    <string name="cancel">Cancelar</string>
    <string name="lyrics_not_found">Letra não encontrada pra essa música.</string>
    <string name="back_to_library">Voltar pra Biblioteca</string>
    <string name="shuffle_play">Tocar aleatório</string>
    <string name="tracks_count">%1$d músicas</string>
    <string name="download">Baixar</string>
    <string name="downloaded">Baixada</string>
    <string name="remove_download">Remover download</string>
</resources>
